Bug: fixing the config json file

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "comment": "`cluster` is one of `eve`, `juwels` or `ecmwf`"
+    "comment": "`cluster` is one of `eve`, `juwels` or `ecmwf`",
     "cluster": "eve"
 }
