--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ f90nml==1.2
 idna==2.10
 kiwisolver==1.3.1
 matplotlib==3.3.4
+mpi4py==3.1.3
 netCDF4==1.5.5.1
 numpy==1.20.1
 pandas==1.1.5
+path==16.4.0
 Pillow==8.1.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
